[package]
name = "append_kv"
version = "0.1.0"
edition = "2024"
authors = ["Osman Ghani Granday"]
description = "A simple, persistent append-only key-value store built in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/MrGranday/append_kv"
homepage = "https://github.com/MrGranday/append_kv"
documentation = "https://docs.rs/append_kv"
readme = "README.md"
keywords = ["database", "key-value", "storage-engine", "append-only", "rust"]
categories = ["database-implementations", "data-structures"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
byteorder = "1.5"